--- a/latexguidelines/lsp-guidelines.bib
+++ b/latexguidelines/lsp-guidelines.bib
@@ -8,7 +8,7 @@
   publisher  = {Central Institute of Indian Languages},
   series     = {CIIL Grammar Series},
   title      = {Apatani Grammar},
-  volume     = {12},
+  number     = {12},
   wals_code  = {apt},
   year       = {1985}
 }
@@ -23,7 +23,7 @@
   pages      = {129--187},
   publisher  = {University of Hawaii Press},
   series     = {Oceanic Linguistics Special Publication},
-  title      = {An Outline of Temiar Grammar},
+  title      = {An Outline of {T}emiar Grammar},
   wals_code  = {tmr},
   year       = {1976}
 }
@@ -42,7 +42,7 @@
 	Title = {Control and Complementation}}
 
 @book{Bresnan82a-ed,
-	Address = {Cambridge, MA/""London},
+	Address = {Cambridge},
 	Booktitle = {The Mental Representation of Grammatical Relations},
 	Editor = {Joan Bresnan},
 	Publisher = mitpress,
@@ -138,7 +138,7 @@
   publisher  = {Central Institute of Indian Languages},
   series     = {CIIL grammar series},
   title      = {Mising Grammar},
-  volume     = {17},
+  number     = {17},
   wals_code  = {msg},
   year       = {1991}
 }
@@ -147,6 +147,7 @@
 	Author = {{Ferdinand de} Saussure},
 	Editor = {Charles Bally and Albert Sechehaye},
 	Publisher = {Payot},
+address={Lausanne, Paris},
 	Series = {Biblioth{\`e}que Scientifique Payot},
 	Title = {Cours de linguistique g{\'e}n{\'e}rale},
 	Year = {1916}}
