--- a/latexguidelines/lsp-latex.tex
+++ b/latexguidelines/lsp-latex.tex
@@ -5,8 +5,8 @@
 \section{Installation of the \texttt{langsci} class}
 
 The \latex class for typesetting Language Science Press books was developed by Timm
-Lichte\aimention{Timm Lichte} with
-help be Berthold Crysmann\aimention{Berthold Crysmann} and me\aimention{Stefan M{\"u}ller}. It can be downloded from the GitHUB\is{GitHUB} repository at: \url{https://github.com/langsci/latex}
+Lichte\ia{Lichte, Timm} with
+help be Berthold Crysmann\ia{Crysmann, Berthold} and me\aimention{M\"uller, Stefan}. It can be downloded from the GitHUB\is{GitHUB} repository at: \url{https://github.com/langsci/latex}
 You can download the classes directly from the given web page or use the following git commands to
 create a local copy of the repository:
 \begin{verbatim}
@@ -369,9 +369,9 @@ book proves.
 \subsection{Glossed examples}
 
 Glossed\is{glossing|(}\ispackageb{lsp-gb4e} examples are typeset with a modified version of the \texttt{gb4e}\ispackage{gb4e} package by Craig
-Thiersch\aimention{Craig Thiersch}. The modified package is called \texttt{lsp-gb4e}. It is contained in the styles directory
+Thiersch\aimention{Thiersch, Craig}. The modified package is called \texttt{lsp-gb4e}. It is contained in the styles directory
 that is delivered with the \lsp \latex calsses. It differs from the original package in loading a
-version of \texttt{gloss} that was modified by Alexis Dimitriadis\aimention{Alexis Dimitriadis} in order to be compatible with
+version of \texttt{gloss} that was modified by Alexis Dimitriadis\aimention{Dimitriadis, Alexis} in order to be compatible with
 \texttt{jambox} (see Section~\ref{sec-jambox}).
 
 Simple examples like (\mex{1}) can be typeset as shown below.
@@ -516,7 +516,7 @@ page~\pageref{ex-typology} are typeset as follows:
 \label{sec-jambox}
 
 
-The\ispackageb{jam\-box} package \texttt{jambox} by Alexis Dimitriadis\aimention{Alexis Dimitriadis} can be used to provide information about the language of an example or
+The\ispackageb{jam\-box} package \texttt{jambox} by Alexis Dimitriadis\aimention{Dimitriadis, Alexis} can be used to provide information about the language of an example or
 about a certain other aspect to be highlighted.\il{Maltese}
 \settowidth\jamwidth{VSO}
 \eal
@@ -579,7 +579,7 @@ jambox to \verb+\settowidth+:
 Several\ispackageb{tikz-qtree} tree-drawing packages are around and all have their advantages and disadvantages. I
 used \texttt{tree-dvips} for decades, but it is incompatible with \xelatex, since it creates
 PostScript rather than PDF. Exploring the options I discovered \texttt{tikz-qtree}, which is a
-tikz-based\ispackage{tikz} reimplementation of Alexis Dimitriadis'\aimention{Alexis Dimitriadis} \texttt{q-tree}
+tikz-based\ispackage{tikz} reimplementation of Alexis Dimitriadis'\aimention{Dimitriadis, Alexis} \texttt{q-tree}
 package. The syntax for drawing trees is rather simple and in comparison to \texttt{tree-dvips} drawing trees
 is considerably speeded up. Figure~\vref{fig-the-dog-barks} shows a simple example.
 \begin{figure}[htbp]
@@ -637,8 +637,8 @@ The code below shows how words below a certain node can be put under a triangle 
 
 \subsection{DRSes: \texttt{drs}}
 
-DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\aimention{Alexis
-  Dimitriadis}. There are various commands that let you typeset simple DRSes, ones with implications
+DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\aimention{Dimitriadis, Alexis
+}. There are various commands that let you typeset simple DRSes, ones with implications
 and DRSes with quantifiers. Some examples from the manual are given below:
 
 \bigskip
@@ -678,7 +678,7 @@ and DRSes with quantifiers. Some examples from the manual are given below:
 \subsection{AVMs}
 
 The package for typesetting AVMs that is most widely used is the package \texttt{avm}\ispackage{avm}
-by Chris Manning\aimention{Chris Manning}. 
+by Chris Manning\aimention{Manning, Chris}. 
 
 %% This package is described in the following
 %% subsection. Section~\ref{sec-lsp-avm} describes AVM macros that were put together by Markus Duda\aimention{Markus Duda}.
@@ -722,7 +722,7 @@ by Chris Manning\aimention{Chris Manning}.
 \end{verbatim}
 %
 The command \verb+\tp+ is defined as follows (the code is taken from Detmar
-Meurers'\aimention{Detmar Meurers} \texttt{avm+}\ispackage{avm+}):
+Meurers'\aimention{Meurers, Detmar} \texttt{avm+}\ispackage{avm+}):
 \begin{verbatim}
 % command to fontify the type values of an avm 
 \newcommand{\tpv}[1]{{\avmjvalfont #1}}
