--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -24,7 +24,7 @@ Proofreaders can choose their preferred way of working. Pdf comments, scanned co
 
 \laundrybox{Proofreading bibliography}{
 \laundryitem All first names are given in full unless the person prefers to use initials.
-\laundryitem No double city names in places of publication.
+% \laundryitem No double city names in places of publication.
 \laundryitem \emph{et al.} not used in bibliography
 \laundryitem Subtitles are capitalized
 \laundryitem Proper nouns are capitalized
