--- a/latexguidelines/showcases.tex
+++ b/latexguidelines/showcases.tex
@@ -10,7 +10,7 @@ book proves.
 \section{Glossed examples}
 
 Glossed\is{glossing|(}\ispackageb{lsp-gb4e} examples are typeset with a modified version of the \texttt{gb4e}\ispackage{gb4e} package by Craig
-Thiersch\ia{Craig Thiersch}. The modified package is called \texttt{lsp-gb4e}. 
+Thiersch\ia{Thiersch, Craig}. The modified package is called \texttt{lsp-gb4e}. 
 % % It is contained in the styles directory that is delivered with the \lsp \latex classes. It differs from the original package in loading a version of \texttt{gloss} that was modified by Alexis Dimitriadis\ia{Alexis Dimitriadis} in order to be compatible with \texttt{jambox} (see Section~\ref{sec-jambox}).
 
 Simple examples like \REF{ex:showcases:simple} can be typeset as shown below.
@@ -237,7 +237,7 @@ page~\pageref{ex-typology} are typeset as follows:
 \label{sec-jambox}
 
 
-The\ispackageb{jam\-box} package \texttt{jambox} by Alexis Dimitriadis\ia{Alexis Dimitriadis} can be used to provide information about the language of an example or
+The\ispackageb{jam\-box} package \texttt{jambox} by Alexis Dimitriadis\ia{Dimitriadis, Alexis} can be used to provide information about the language of an example or
 about a certain other aspect to be highlighted.\il{Maltese}
 \settowidth\jamwidth{VSO}
 \eal
@@ -385,8 +385,7 @@ for children={l+=5mm,no edge}
 
 \section{DRSes: \texttt{drs}}
 
-DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\ia{Alexis
-  Dimitriadis}. There are various commands that let you typeset simple DRSes, ones with implications
+DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\ia{Dimitriadis, Alexis}. There are various commands that let you typeset simple DRSes, ones with implications
 and DRSes with quantifiers. Some examples from the manual are given below:
 
 \bigskip
@@ -426,7 +425,7 @@ and DRSes with quantifiers. Some examples from the manual are given below:
 \section{AVMs}
 
 The package for typesetting AVMs that is most widely used is the package \texttt{avm}\ispackage{avm}
-by Chris Manning\ia{Chris Manning}. 
+by Chris Manning\ia{Manning, Chris}. 
 
 %% This package is described in the following
 %% subsection. Section~\ref{sec-lsp-avm} describes AVM macros that were put together by Markus Duda\ia{Markus Duda}.
@@ -470,7 +469,7 @@ by Chris Manning\ia{Chris Manning}.
 \end{verbatim}
 %
 The command \verb+\tp+ is defined as follows (the code is taken from Detmar
-Meurers'\ia{Detmar Meurers} \texttt{avm+}\ispackage{avm+}):
+Meurers'\ia{Meurers, Detmar} \texttt{avm+}\ispackage{avm+}):
 \begin{verbatim}
 % command to fontify the type values of an avm 
 \newcommand{\tpv}[1]{{\avmjvalfont #1}}
