--- a/latexguidelines/latex.tex
+++ b/latexguidelines/latex.tex
@@ -3,7 +3,7 @@
 
 \section{Installation of the \texttt{langsci} class}
 \subsection{Local installation}
-For your first book, the easiest way will be to download the skeleton from \url{http://test.langsci-press.org/information/templates}.
+For your first book, the easiest way will be to download the skeleton from \url{http://langsci-press.org/templatesAndTools}.
 There is a skeleton for monographies and a skeleton for edited volumes. Choose what is appropriate for you.
  
 % If you are dealing with Language Science Press books on a regular basis, you might want to opt for a system wide installation. The LSP class can be downloaded from \url{...} and will be available on CTAN in the near future.
