info about img file formats

--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -50,6 +50,8 @@ Choose one and be consitent. For edited volumes, the choice is per chapter.
 \subsection{Figures}  
 Please mention the creator and the licensing status of all photographs and all drawings in the caption unless they were created by you. The licensing must be compatible with the license chosen for the book. It is for instance legally not possible to include restricted copyrighted material in an open access book. 
 
+Photographs should be in jpg format. For all drawings, maps, diagrams etc, a vector format (*svg, *eps, *ps, *pdf) is preferred, *png is acceptable. For *jpg and *png, resolution should be at least 320 dpi. 
+
 \subsection{Tables}
 Be aware that the book will not be printed on A4/letter paper. This means that you do have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very, short like numbers, phonemes or very short words for instance, there might be exceptions (\tabref{tab:lexicaltable}).
 
