--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -1,5 +1,5 @@
 \chapter{Proofreaders}
-Proofreaders should pay attention to spelling, grammar, style etc.  Please refer to the Generic Style Rules and the house rules listed in \sectref{sec:houserules}.
+Proofreaders should pay attention to spelling, grammar, style, etc.  Please refer to the Generic Style Rules and the house rules listed in \sectref{sec:houserules}.
 
 Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are all acceptable.
 
