--- a/latexguidelines/showcases.tex
+++ b/latexguidelines/showcases.tex
@@ -42,7 +42,7 @@ Grammaticality judgments can be added in brackets. Note that in this case, brace
 \ea[*]{
   \gll  Der Mann schläft.\\
         the man  sleeps\\
-  \glt `The man sleeps.'
+  \glt `(The man sleeps.)'
   }
 \z
 \end{verbatim} 
@@ -287,10 +287,11 @@ jambox to \verb+\settowidth+:
 \begin{verbatim}
 \ea 
 \settowidth\jamwidth{(German)}
-\ea The man reads the book.    \jambox{(English)}
-\ex Manden læser bogen.        \jambox{(Danish)}
-\ex Der Mann liest das Buch.   \jambox{(German)}
-\zl
+  \ea The man reads the book.    \jambox{(English)}
+  \ex Manden læser bogen.        \jambox{(Danish)}
+  \ex Der Mann liest das Buch.   \jambox{(German)}
+  \z
+\z
 \end{verbatim}
 \ispackagee{jam\-box}
 
