--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -20,7 +20,7 @@ The back matter is structured as follows:
 \begin{table}[h]
 \begin{tabular}{p{4cm}p{6cm}}
  Appendix A & optional \\
- Appendix B etc & optional \\
+ Appendix B & optional \\
  further appendices & optional \\
  Bibliography & obligatory \\
  Author index & obligatory \\
@@ -50,7 +50,7 @@ Choose one and be consitent. For edited volumes, the choice is per chapter.
 \subsection{Figures}  
 Please mention the creator and the licensing status of all photographs and all drawings in the caption unless they were created by you. The licensing must be compatible with the license chosen for the book. It is for instance legally not possible to include restricted copyrighted material in an open access book. 
 
-Photographs should be in jpg format. For all drawings, maps, diagrams etc, a vector format (*svg, *eps, *ps, *pdf) is preferred, *png is acceptable. For *jpg and *png, resolution should be at least 320 dpi. 
+Photographs should be in jpg format. For all drawings, maps, diagrams, etc., a vector format (*svg, *eps, *ps, *pdf) is preferred, *png is acceptable. For *jpg and *png, resolution should be at least 320 dpi. 
 
 \subsection{Tables}
 Be aware that the book will not be printed on A4/letter paper. This means that you do have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very, short like numbers, phonemes or very short words for instance, there might be exceptions (\tabref{tab:lexicaltable}).
@@ -220,7 +220,7 @@ Depending on the series and the language the book is published in authors may  u
 \subsection{Epigrams}
 You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
 
-\subsection{Aspiration, labialization, velarization etc}
+\subsection{Aspiration, labialization, velarization, etc.}
 For phonetic symbols of aspiration and secondary articulation, do not use a superscript normal letter; use the special Unicode characters ʰ ʷ ʲ ˠ ˤ etc. You can define a special command like \verb+{\lab}+ for ʷ for easier input. 
 
 \subsection{Footnotes in section titles}\label{sec:footnote}
